# HW_28_Django_pg

./: README.md  manage.py  pyproject.toml
HW_28_Django_postgres/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py
ads/models/: ad.py
datasets/: ad.json  data_json.py  location.json
users/: views.py
users/migrations/: 0001_initial.py
