[tool.poetry]
name = "hw-28-django-postgres"
version = "0.1.0"
description = ""
authors = ["KeitoAV <keito_ekka@mail.ru>"]
readme = "README.md"
packages = [{include = "hw_28_django_postgres"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
